--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:57743",
-      "sslPort": 44311
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -17,11 +17,11 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "CatBasicExample": {
+    "Development": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
-      "applicationUrl": "http://localhost:5001;http://localhost:5000",
+      "applicationUrl": "http://localhost:12120;https://localhost:12121",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
