Complete apply migrations

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "tvc12": "Host=localhost;Port=22224;Database=tvc_12;Username=tvc12;Password=tvc@lovelan"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
