--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "sk": "pT6xfmZ0WZIdd4qxpVzS",
   "ConnectionStrings": {
     "tvc12": "Host=localhost;Port=22224;Database=tvc_12;Username=tvc12;Password=tvc@lovelan"
   },
