--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "auth": {
+    "sk": "pT6xfmZ0WZIdd4qxpVzS",
+    "algorithm": "HS256"
+  },
   "ConnectionStrings": {
     "tvc12": "Host=localhost;Port=22224;Database=tvc_12;Username=tvc12;Password=tvc@lovelan"
   },
